@@ -132,15 +132,15 @@ module Gluon
       end
 
       c.page_around{
-        @logger.debug "#{c}: page_start." if @logger.debug?
-        c.page_start
+        @logger.debug "#{c}: page_start(#{r.path_args.map{|s| s.inspect }.join(', ')})" if @logger.debug?
+        c.page_start(*r.path_args)
         begin
           @logger.debug "#{c}: page_validation_preprocess." if @logger.debug?
           c.page_validation_preprocess
           @logger.debug "#{c}: set form parameters." if @logger.debug?
           Controller.set_form_params(c, r.equest.params)
-          @logger.debug "#{c}: page_request(#{r.path_args.map{|s| s.inspect }.join(', ')})" if @logger.debug?
-          c.page_request(*r.path_args)
+          @logger.debug "#{c}: page_request" if @logger.debug?
+          c.page_request
           if (action = Controller.find_first_action(c, r.equest.params)) then
             @logger.debug "#{c}: validation is #{r.validation.inspect}." if @logger.debug?
             if (r.validation) then
