@@ -24,9 +24,6 @@ class Example
       @now = Time.now
     end
 
-    def request_GET
-    end
-
     def request_POST
       validation(@errors) do |v|
         v.one_time_token
